Tools/WebKitTestRunner/TestController.h
@@ -62,6 +62,8 @@ public:
     bool beforeUnloadReturnValue() const { return m_beforeUnloadReturnValue; }
     void setBeforeUnloadReturnValue(bool value) { m_beforeUnloadReturnValue = value; }
 
+    bool resetStateToConsistentValues();
+
 private:
     void initialize(int argc, const char* argv[]);
     void run();
@@ -75,8 +77,6 @@ private:
     void platformDidCommitLoadForFrame(WKPageRef, WKFrameRef);
     void initializeInjectedBundlePath();
     void initializeTestPluginDirectory();
-
-    bool resetStateToConsistentValues();
 
     // WKContextInjectedBundleClient
     static void didReceiveMessageFromInjectedBundle(WKContextRef, WKStringRef messageName, WKTypeRef messageBody, const void*);
