Tools/Scripts/webkitpy/layout_tests/port/driver.py
@@ -319,6 +319,8 @@ class Driver(object):
             _log.debug('WebProcess crash, pid = %s, error_line = %s' % (str(pid), error_line))
             if error_line.startswith("#PROCESS UNRESPONSIVE - WebProcess"):
                 self._subprocess_was_unresponsive = True
+                # We want to show this since it's not a regular crash and probably we don't have a crash log.
+                self.error_from_test += error_line
             return True
         return self.has_crashed()
 
